Sun Jul 27 11:43:36 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLPrintMoveAnalysis): remove some colspans to
	produce better output. Fix reentrancy problem.
	(reported by Joseph)

Sun Jul 27 11:11:33 2003  Joern Thyssen  <jth@gnubg.org>

	Avoid coredump when importing invalid SGG (and others) with
	"set gotofirstgame on"
	(reported by Joseph)

	* import.c: let import routines return -1 indicating errors.
	* gnubg.c: handle returned value from import routines.

Sun Jul 27 01:46:23 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (CommandExportHTMLImages): render board label pictures
	correctly.

Sun Jul 27 01:20:51 2003  Joern Thyssen  <jth@gnubg.org>

	Update board labels dynamically.

	* gtkboard.c (board_invalidate_labels): new function.
	* gtkboard.c (board_set): invalidate labels if turn has changed.
	* gtkprefs.c (GeneralPage): add option for dynamic labels.
	* renderprefs.c (RenderPrefsParam, RenderPrefsCommand): 
	add option for dynamic labels.
	* render.c (CalculateImages): render labels dynamically based
	on who's on roll.
	* render.c (RenderImages): render images needed for dynamic labels.

Sat Jul 26 22:45:35 2003  Joern Thyssen  <jth@gnubg.org>

	Include Holger's arrows in the html export.

	* htmlimages.c (CommandExportHTMLImages): write images
	with arrows if LIBART is present.
	* html.c (printHTMLBoardGNU): use new images.

Sat Jul 26 18:15:27 2003  Joern Thyssen  <jth@gnubg.org>

	* analysis.c - utilise the combined double/take data and preserve
	rollouts across analyses
	
Sat Jul 26 19:16:45 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLPrintCubeAnalysisTable): more styles.
	* html.c (HTMLPrintMoveAnalysi): use bullet instead of *.

Sat Jul 26 17:18:40 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (board_set): oops, get rid of button_clockwise.
	* gtktoolbar.c (ToolbarSetClockwise): new function.

	* gtkboard.c (ReturnHits): new function.
	* gtkboard.c (update_move): first attempt on showing number
	of rolls that hit blots.